[package]
name        = "magnetar"
description = "Apache Pulsar client driver for Rust. Public façade — re-exports the sans-io core plus the selected runtime engine."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
readme        = "../../README.md"
keywords      = { workspace = true }
categories    = { workspace = true }

[lints]
workspace = true

[features]
default  = ["tokio", "crypto-aws-lc-rs"]
tokio    = ["dep:magnetar-runtime-tokio", "dep:tokio", "dep:futures-util"]
# `moonpool` is additive on top of `tokio` — per ADR-0019 gate (e) the
# façade ships both engines simultaneously available in the same binary,
# so the moonpool branch lives behind `tokio + moonpool` rather than
# moonpool-only. `PulsarClient<MoonpoolEngine<P>>` is reachable iff both
# features are on.
moonpool = ["tokio", "dep:magnetar-runtime-moonpool", "dep:moonpool-core"]
admin    = ["dep:magnetar-admin"]
auth-oauth2 = ["dep:magnetar-auth-oauth2"]
auth-sasl   = ["dep:magnetar-auth-sasl"]
# `auth-sasl-kerberos` implies `auth-sasl` and turns on the GSSAPI binding
# in `magnetar-auth-sasl` (see that crate's `kerberos` feature + ADR-0029).
# Pulls `libgssapi` into the dependency graph; requires the system MIT KRB5
# or Heimdal runtime to be installed on the build host.
auth-sasl-kerberos = ["auth-sasl", "magnetar-auth-sasl/kerberos"]
auth-athenz = ["dep:magnetar-auth-athenz"]
# Optional ZTS round-trip on top of `auth-athenz`. Pulls reqwest + tokio
# into the athenz crate (see `magnetar-auth-athenz/zts`).
auth-athenz-zts = ["auth-athenz", "magnetar-auth-athenz/zts"]
encryption  = ["dep:magnetar-messagecrypto"]
# End-to-end tests against a real Pulsar 4.x standalone broker via
# `testcontainers-rs`. Requires Docker on the host. CI runs these in
# the `e2e` job (workflow_dispatch + release branches only).
e2e         = ["tokio", "admin"]
# PIP-33 multi-cluster e2e (ADR-0034) — opt-in even within `e2e` because
# the two-cluster docker-compose fixture is ~60s slower to spin up. Per
# ADR-0036 cost-shifting precedent, runs weekly only via
# `.github/workflows/e2e-replicated-subs.yml`, never on per-PR CI.
e2e-multi-cluster = ["e2e"]

# PIP-466 V5 client surface (ADR-0032). Off by default — Java V5 is still
# iterating upstream so magnetar ships the surface as experimental. The
# V5 types are thin wrappers over v4 with `Duration`-typed timeouts and
# explicit `Option<MessageId>` send returns; no wire change, no sans-io
# change. Only meaningful when `tokio` is also enabled (the wrappers
# delegate to the tokio Producer / Consumer surface).
experimental-v5-client = ["tokio"]

# PIP-460 scalable topics (ADR-0031) — experimental StreamConsumer surface.
# Default OFF. Compiling without this flag leaves the baseline surface
# bit-for-bit unchanged (proved by the `scalable_topics_feature_off_does_not_export`
# compile-fail test). The `magnetar::scalable` module, the `ScalableTopicsApi`
# extension trait, and the `topic://` URL parser branch only exist when the
# flag is on. Propagates to the proto wire surface and to whichever engine(s)
# are enabled. E2E against a Pulsar 5.0+ broker is gated on
# `e2e,scalable-topics` and does NOT block release (no broker
# ships PIP-460 today).
scalable-topics = [
    "magnetar-proto/scalable-topics",
    "magnetar-runtime-tokio?/scalable-topics",
    "magnetar-runtime-moonpool?/scalable-topics",
    "magnetar-admin?/scalable-topics",
]

# --- Crypto provider features (issue #9, ADR-0035). Compile-time pluggable
# rustls crypto backend. Under `--all-features` the cfg-priority cascade
# resolves to aws-lc-rs (see `magnetar-runtime-{tokio,moonpool}/src/
# tls_crypto.rs`). Single-provider builds must enable exactly one of
# these via `--no-default-features --features tokio,crypto-<x>`. ---
crypto-aws-lc-rs = [
    "magnetar-runtime-tokio?/crypto-aws-lc-rs",
    "magnetar-runtime-moonpool?/crypto-aws-lc-rs",
    "magnetar-auth-athenz?/crypto-aws-lc-rs",
    "magnetar-admin?/crypto-aws-lc-rs",
    "magnetar-auth-oauth2?/crypto-aws-lc-rs",
]
crypto-ring = [
    "magnetar-runtime-tokio?/crypto-ring",
    "magnetar-runtime-moonpool?/crypto-ring",
    "magnetar-auth-athenz?/crypto-ring",
    "magnetar-admin?/crypto-ring",
    "magnetar-auth-oauth2?/crypto-ring",
]
crypto-openssl = [
    "magnetar-runtime-tokio?/crypto-openssl",
    "magnetar-runtime-moonpool?/crypto-openssl",
    "magnetar-auth-athenz?/crypto-openssl",
    "magnetar-admin?/crypto-openssl",
    "magnetar-auth-oauth2?/crypto-openssl",
]
crypto-fips = [
    "magnetar-runtime-tokio?/crypto-fips",
    "magnetar-runtime-moonpool?/crypto-fips",
    "magnetar-auth-athenz?/crypto-fips",
    "magnetar-admin?/crypto-fips",
    "magnetar-auth-oauth2?/crypto-fips",
]

[dependencies]
magnetar-proto             = { workspace = true }
magnetar-runtime-tokio     = { workspace = true, optional = true }
magnetar-runtime-moonpool  = { workspace = true, optional = true }
moonpool-core              = { workspace = true, optional = true }
magnetar-admin             = { workspace = true, optional = true }
magnetar-auth-oauth2       = { workspace = true, optional = true }
magnetar-auth-sasl         = { workspace = true, optional = true }
magnetar-auth-athenz       = { workspace = true, optional = true }
magnetar-messagecrypto     = { workspace = true, optional = true }
bytes                      = { workspace = true }
futures-util               = { workspace = true, optional = true, features = ["std", "async-await"] }
parking_lot                = { workspace = true }
thiserror                  = { workspace = true }
tokio                      = { workspace = true, optional = true, features = ["rt", "sync", "test-util"] }
tracing                    = { workspace = true }
url                        = { workspace = true }
uuid                       = { workspace = true }

[dev-dependencies]
# `aws-lc-rs` is pulled in only for the PIP-4 e2e tests
# (`tests/e2e_crypto.rs`) where we need to generate RSA test keys for the
# `MessageCrypto` round-trip. The non-test crate path stays free of this
# heavy dep — encryption itself lives in `magnetar-messagecrypto`.
aws-lc-rs          = { workspace = true }
# `base64` powers the HS256 JWT minting in
# `tests/e2e_shadow_topic_replicator.rs` (URL-safe-no-pad JWS segments).
# Pure dev-dep — not pulled in for non-test builds.
base64             = { workspace = true }
magnetar-fakes     = { workspace = true }
reqwest            = { workspace = true }
schemars           = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
testcontainers     = { workspace = true }
tokio              = { workspace = true, features = ["rt-multi-thread", "macros", "time", "test-util"] }
tracing-subscriber = { workspace = true }
# `wiremock` powers the `e2e_oauth2` IDP stub. Pure dev-dep — not pulled
# in for non-test builds.
wiremock           = { workspace = true }
